--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "selector-action": "^1.1.1",
+    "shallow-equal": "^1.2.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
