--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "enzyme-adapter-react-16.3": "^1.4.1",
     "moment": "^2.24.0",
     "next": "^8.1.0",
+    "node-sass": "4.14.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
@@ -20,6 +21,7 @@
     "redux-pack": "^0.1.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "sass": "^1.32.11",
     "selector-action": "^1.1.1",
     "shallow-equal": "^1.2.1",
     "web-vitals": "^1.1.1"
@@ -57,7 +59,6 @@
     "aphrodite": "^2.2.3",
     "babel-loader": "^8.0.5",
     "json-server": "^0.14.2",
-    "node-sass": "^4.11.0",
     "react-with-styles-interface-aphrodite": "^5.0.1",
     "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^7.1.0",
